# vigia

./: .gitignore  CMakeLists.txt  README.md
include/core/: AudioManager.h  Camera.h  Game.h  InputManager.h  Mesh.h  Model.h  Renderer.h  Shader.h  TextRenderer.h  TextureCache.h
include/entities/: Creature.h  GameObject.h  Player.h
include/systems/: SceneManager.h
shaders/: scene_fragment.glsl  scene_vertex.glsl  screen_fragment.glsl  screen_vertex.glsl
src/: main.cpp
src/core/: AudioManager.cpp  Game.cpp  InputManager.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Shader.cpp  TextRenderer.cpp
src/entities/: Creature.cpp  Player.cpp
src/systems/: SceneManager.cpp
